<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_shape"
    android:backgroundTint="@color/categoryCard"
    android:paddingBottom="@dimen/medium_margin">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_memory_dialog_title"
        android:textSize="@dimen/xxxlarge_text"
        android:textColor="@android:color/white"
        android:fontFamily="@font/avenir"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/medium_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/medium_margin"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_id"
            android:textColorHint="@color/secondaryTextColor"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/college_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/white"
        android:layout_margin="@dimen/medium_margin">
        <AutoCompleteTextView
            android:id="@+id/college_search_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColorHint="@color/secondaryTextColor"
            android:hint="Select your college"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/college_search_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/medium_margin"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/graduation_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/image_desc"
            android:textColorHint="@color/secondaryTextColor"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/image_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/upload_image"
        android:text="College memory picture"
        android:fontFamily="@font/avenir"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/large_text"
        android:layout_marginTop="@dimen/xxlarge_margin"
        android:layout_marginStart="@dimen/medium_margin"/>

    <Button
        android:id="@+id/upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Upload Image"/>

    <CheckBox
        android:id="@+id/disclaimer_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upload_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/disclaimer"
        android:textColor="@color/primaryTextColor"
        android:gravity="top"/>

    <Button
        android:id="@+id/submit_memory_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/disclaimer_cb"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/submit"
        android:backgroundTint="@android:color/holo_blue_light"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/disclaimer_cb"
        app:layout_constraintEnd_toStartOf="@id/submit_memory_btn"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/gray"/>

    <ProgressBar
        android:id="@+id/memory_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>